syntax = "proto3";
package test;

option go_package = "./;main";

service TestService {
  rpc TestRPC(TestRequest) returns (TestResponse) {}
  rpc TestServerStreamRPC(TestRequest) returns (stream TestResponse) {}
  rpc TestClientStreamRPC(stream TestRequest) returns (TestResponse) {}
  rpc TestBidirectionalStreamRPC(stream TestRequest) returns (stream TestResponse) {}
}

message TestRequest {
  uint64 test_response_sz = 1;
  repeated uint64 data = 2;
}

message TestResponse {
  repeated uint64 data = 1;
}
